# bur_search_motion_planning

./: .gitmodules  README.md  robowflex_library
bur_search_utils/: CMakeLists.txt  package.xml
bur_search_utils/2D_search_nodes/: manip.txt  manip_dist.txt
bur_search_utils/apptainer/: bur_search_planning.def
bur_search_utils/bash_scripts/: build-apptainer.sh  build-docker.sh  bur_2dof_planning_test.sh  bur_7dof_planning_test.sh  evaluate_bur_smpl_2DoF.sh  evaluate_bur_smpl_7DoF.sh  manip_vs_manip_dist_2DoF.sh  manip_vs_manip_dist_7DoF.sh  post-build.sh  pre-build.sh  run-docker.sh
bur_search_utils/docker/: Dockerfile
bur_search_utils/experiments/datasets/planar_2DoF/: request0001.yaml  request0002.yaml  request0003.yaml  scene0001.yaml  scene0002.yaml  scene0003.yaml
bur_search_utils/experiments/datasets/planar_2DoF/m_prim_files/: planar_2dof_10.mprim  planar_2dof_11.mprim  planar_2dof_12.mprim  planar_2dof_4.mprim  planar_2dof_5.mprim  planar_2dof_6.mprim  planar_2dof_7.mprim  planar_2dof_8.mprim  planar_2dof_9.mprim
bur_search_utils/experiments/datasets/planar_7DoF/: request0001.yaml  request0002.yaml  request0003.yaml  scene0001.yaml  scene0002.yaml  scene0003.yaml
bur_search_utils/experiments/datasets/planar_7DoF/m_prim_files/: planar_7dof_10.mprim  planar_7dof_11.mprim  planar_7dof_12.mprim  planar_7dof_4.mprim  planar_7dof_5.mprim  planar_7dof_6.mprim  planar_7dof_7.mprim  planar_7dof_8.mprim  planar_7dof_9.mprim
bur_search_utils/python_scripts/: plot_bur_smpl_search_results_time_exp_init.py  plot_search.py  plot_searchV2.py
utils/: CMakeLists.txt
(+86 files in other folders)
